# autoupdater

./: README.md  pyproject.toml
src/: auto_updater.py
